# mangadex-lib

./: .gitpod.Dockerfile  .gitpod.yml  README.md  manga.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pythonapp.yml
src/mangadex/: __init__.py
src/mangasync/: main.py
